# DataM

./: .env  .gitignore  Cargo.toml  README.md  test.db
DataM-Vault/: Home.md  Start Here - This Week.md
DataM-Vault/1 - Architecture/: Architecture - 1 Core 2 Shells.md  Clean Architecture Layer Map.md  Data Plane vs Control Plane.md  Hot Path - Arrow Everywhere.md  Performance Budget.md  Tech Stack.md
DataM-Vault/2 - Engine Milestones/: M0 - Tracer Bullet.md  M1 - Real Connections.md  M2 - Arrow Spine.md  M3 - Virtualized Grid.md  M4 - Streaming and Worker.md  M5 - PG Binary and COPY.md  M6 - Desktop Shell (Tauri).md  M7 - Edit, Inspect, Rescue.md  Roadmap.md
DataM-Vault/3 - Features/: Feature Board.md  Feature Catalog.md  Feature Roadmap.md  Parity Checklist - DataGrip and phpMyAdmin.md
DataM-Vault/3 - Features/Epics/: F01 - Connections and Data Sources.md  F02 - Object Explorer.md  F03 - SQL Editor.md  F04 - Result Grid.md  F05 - Data Editing and Transactions.md  F06 - Schema and DDL Management.md  F07 - Import and Export.md  F08 - Visual Tools.md  F09 - Search and Navigation.md  F10 - Admin and Server.md  F11 - Productivity and Safety.md  F12 - Desktop Superpowers.md
DataM-Vault/4 - Reference/: Glossary.md  Iron Rules.md  Risks and Gotchas.md
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/use_cases/: mod.rs  run_query.rs
src/domain/: error.rs  mod.rs  query.rs  row_set.rs
src/infrastructure/: mod.rs
src/infrastructure/mariadb/: mariadb_executor.rs  mod.rs
src/infrastructure/sqlite/: mod.rs  sqlite_executor.rs
(+27 files in other folders)
