[package]
name = "DataM"
version = "0.1.0"
edition = "2024"

[lib]
name = "datam"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
